Initial commit after updating Flexible Jekyll theme

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: main
     {% if page.img %}
     <div class="page-cover-image">
       <figure>
-        <img class="page-image" src={{ "/assets/img/" | prepend: site.baseurl | append : page.img}} alt="{{page.title}}">
+        <img class="page-image" src={{"/assets/img/" | prepend: site.baseurl | append : page.img}} alt="{{page.img-alt}}" title="{{page.img-alt}}">
         {% if page.fig-caption %}
           <figcaption>{{page.fig-caption}}</figcaption>
         {% endif %}
@@ -19,7 +19,9 @@ layout: main
         <h1 class="page-title">{{page.title}}</h1>
         <div class="page-date"><span>{{page.date | date: '%Y, %b %d'}}&nbsp;&nbsp;&nbsp;&nbsp;</span></div>
       </header>
-      {{content | markdownify}}
+      {% comment %}{{content | markdownify}}{% endcomment %}
+      {% capture anchorAttrs %}style="text-decoration: none; font-size: 0.6em;"{% endcapture %}
+      {% include anchor_headings.html html=content anchorBody="🔗" anchorAttrs=anchorAttrs %}
       <div class="page-footer">
         <div class="page-share">
           <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
@@ -32,7 +34,7 @@ layout: main
           {% endfor %}
         </div>
       </div>
-      {% include disqus.html %}
+      {% comment %}{% include disqus.html %}{% endcomment %}
     </div> <!-- End Wrap Content -->
   </div> <!-- End Page Content -->
 </article> <!-- End Article Page -->
