--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -142,7 +142,7 @@ kbd,
 samp {
   font-family: monospace, monospace;
   /* 1 */
-  font-size: 1em;
+  font-size: 0.9em;
   /* 2 */
 }
 
@@ -446,10 +446,10 @@ template {
 .highlighter-rouge {
   color: #ce887b;
   font-weight: 400;
-  border: 1px solid #607D8B;
+  border: 1px solid #c6d4da;
   -webkit-border-radius: 3px;
           border-radius: 3px;
-  padding: 0.1rem 0.5rem;
+  padding: 0.1rem 0.3rem;
 }
 
 .highlight .hll {
@@ -1478,4 +1478,22 @@ a.newer-posts:hover {
   .post .post-content .post-title a {
     font-size: 21px;
   }
+}
+
+/* Custom CSS added by AnneCYH */
+.content-two-column-left {
+  float: left;
+  width: 50%;
+}
+
+.content-two-column-right {
+  float: right;
+  width: 50%;
+}
+
+/* Clear floats after the columns */
+.content-row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
